--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Blog</title>
+    <title>About</title>
 </head>
 <body>
     <header>
-        <h1>Best Games To Play In 2024</h1>
+        <h1>About Us</h1>
         <nav>
             <a href="index.html">Blog</a> | 
             <a href="about.html">About</a> | 
