modify all files in main

--- a/danysh.html
+++ b/danysh.html
@@ -25,7 +25,7 @@
         <div class="social-media">
             <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
       
-            <a href="aboutus.html">Back</a>
+            <a href="about.html">Back</a>
         </div>
     </div>
 </body>
