--- a/iliya.html
+++ b/iliya.html
@@ -26,7 +26,7 @@
             <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
             <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i> Twitter</a>
             <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i> YouTube</a>
-            <a href="aboutus.html">Back</a>
+            <a href="about.html">Back</a>
         </div>
     </div>
 </body>
