--- a/overcooked.html
+++ b/overcooked.html
@@ -15,7 +15,7 @@
     <!-- Navigation Section -->
     <nav>
         <ul>
-            <li><a href="munchun.html">Back</a></li>
+            <li><a href="index.html">Back</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#review">Game Review</a></li>
             <li><a href="#features">Features</a></li>
