changes to about.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         The game has gained widespread attention due to its stunning graphics, dynamic combat system, and immersive portrayal of Chinese folklore. Powered by Unreal Engine 5, Black Myth: Wukong promises a visually rich and challenging gameplay experience.</p>
                     <div class="blog-author">
                         <div class="blog-author-img">
-                            <img alt="" src="images/images/b2.jpg">
+                            <img alt="" src="images/images/iliya.jpg">
                         </div>
                         <div class="blog-author-text">
                             <strong>Iliya Aiman</strong>
@@ -96,10 +96,10 @@
                         The game is known for its high level of difficulty, focus on teamwork, and humorous political satire.</p>
                     <div class="blog-author">
                         <div class="blog-author-img">
-                            <img alt="" src="images/images/b2.jpg">
+                            <img alt="" src="images/images/amir.jpg">
                         </div>
                         <div class="blog-author-text">
-                            <strong>Iliya Aiman</strong>
+                            <strong>Amir Hakimi</strong>
                             <span> September 11, 2024 </span>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                         HyperMotion V technology enhances player movements with real match data for greater realism. The new PlayStyles and PlayStyles+ features give players unique abilities based on their real-life traits. Ultimate Team introduces Evolutions, allowing players to upgrade cards over time, and now includes women’s football, enabling mixed-gender squads. Career Mode has been revamped with more tactical depth, including training plans and a cinematic Dynamic Moments feature. Cross-play has been expanded to more modes, including Pro Clubs and VOLTA, and the game’s visuals are improved with the Frostbite Engine. EAFC 24 combines these advancements to offer a fresh and immersive football experience</p>
                     <div class="blog-author">
                         <div class="blog-author-img">
-                            <img alt="" src="images/images/b1.jpg">
+                            <img alt="" src="images/images/danysh.jpg">
                         </div>
                         <div class="blog-author-text">
                             <strong>Danysh Muqhreez</strong>
@@ -153,10 +153,10 @@
 
                     <div class="blog-author">
                         <div class="blog-author-img">
-                            <img alt="" src="images/images/b1.jpg">
+                            <img alt="" src="images/images/meor.jpg">
                         </div>
                         <div class="blog-author-text">
-                            <strong>Danysh Muqhreez</strong>
+                            <strong>Meor Hazimi</strong>
                             <span> September 15, 2024 </span>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
 
                     <div class="blog-author">
                         <div class="blog-author-img">
-                            <img alt="" src="images/images/b3.jpg">
+                            <img alt="" src="images/images/munchun.jpg">
                         </div>
                         <div class="blog-author-text">
                             <strong>Mun Chun</strong>
