--- a/meor.html
+++ b/meor.html
@@ -17,13 +17,13 @@
         <div class="profile-header">
             <img src="images/images/meor.jpg" alt="Profile Picture" class="profile-img">
             <h1 class="name">Meor Hazimi</h1>
-            <h3 class="bio-title"> | Wibu | Procrastinator</h3>
+            <h3 class="bio-title">Sleepy | Chill | Loves Music</h3>
         </div>
         <div class="profile-bio">
-            <p>My name is Meor Hazimi and my hobby is playing video games. My favourites video games is EAFC 24 because my dream is to be a football player. I have played this game since I was 14 years old. I knew this game from my brother because he is also a heavy gamer like me. Currently, I'm doing my Degree studies in MMU Cyberjaya. Fun fact about me is that I am a lazy student but I chose to pursue my degree in computer science. My height is 170 cm which kind of tall for Malaysian people but I still feel that I am short. I love to spend my time by jogging because that is the only time I do some healthy activities.</p>
+            <p>My name is Meor Hazimi and I like to listen to music during my freetime. I would say my favourite genre is rock and my favourite band is Deftones. Other than that, I also like to play video games. My favourite video game is Terraria because it is such a fun game as you can do alot of things in it since it is a sandbox game and I have been playing it since I was 8 years old.</p>
         </div>
         <div class="social-media">
-            <a href="https://www.instagram.com/meor_hazimi/" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
+            <a href="https://www.instagram.com/meor_hazimi/" target="_blank"><i class="fa fa-instagram"></i>Instagram</a>
             <a href="about.html">Back</a>
         </div>
     </div>
