--- a/roblox.html
+++ b/roblox.html
@@ -5,24 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roblox - Game Overview</title>
     <link rel="stylesheet" href="game.css">
+
+    <style>
+
+        header{
+    background-image: url(images/images/doodle_game.jpeg);
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+header h1 {
+    font-size: 2.2em;
+    margin: 0;
+    color: white;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    padding: 0 15px;
+    font-weight: bold;
+}
+nav a:hover {
+    text-decoration: underline;
+}
+footer {
+            background-image: url(images/images/doodle_game.jpeg);
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 0.9em;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
     <!-- Header Section -->
     <header>
         <h1>Roblox - Game Overview</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Back</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#review">Game Review</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#gallery">Screenshots</a></li>
+                <li><a href="#trailer">Trailer</a></li>
+            </ul>
+        </nav>
     </header>
-
-    <!-- Navigation Section -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Back</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#review">Game Review</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#gallery">Screenshots</a></li>
-            <li><a href="#trailer">Trailer</a></li>
-        </ul>
-    </nav>
 
     <!-- Game Overview Section -->
     <section id="about">
@@ -61,7 +93,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>© 2024 Roblox Game Overview. All rights reserved.</p>
+        <p>© 2024 Group Moon. All rights reserved.</p>
     </footer>
 </body>
 </html>
