--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         }
 
         header {
-            background-color: #2c3e50;
+            background-image: url(images/images/doodle_game.jpeg);
             color: white;
             text-align: center;
             padding: 20px 0;
@@ -90,7 +90,7 @@
         }
 
         footer {
-            background-color: #2c3e50;
+            background-image: url(images/images/doodle_game.jpeg);
             color: white;
             text-align: center;
             padding: 10px 0;
